play current video

--- a/partials/now-playing.html
+++ b/partials/now-playing.html
@@ -1,12 +1,3 @@
- <div ng-repeat="video in data">
-    <h3 class="col-md-6">{{video.title}}</h3>
-    
-    <div class="clearfix"></div>
-
-		<!--<div class="row" ng-if="gallery.contents.length>0">
-			<div ng-repeat="content in gallery.contents" class="site-thumbnail col-md-3">
-				{{content.name}}<br />
-				<img src="{{content.thumbnail_url}}" class="img-rounded">
-			</div>
-		</div>-->
+ <div ng-repeat="program in data">
+    <div id="video">{{program.external_id|drawVideo:program.provider:"video"}}</div>
 </div>
